fix vert-bar alignment in top champion items add ability to register metadata about clientemu servers fix berserkers furor and distortion being reversed add loss prevented to game metadata

--- a/lol/static/less/main.less
+++ b/lol/static/less/main.less
@@ -151,6 +151,8 @@ img.sprite {
 		// width:100%;
 		.vert-bar {
 			height:64px;
+			margin-left:-4px;
+			.box-shadow(0px 0px 2px);
 		}
 		.stats {
 			width:80px;
